[package]
name = "elftrace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
risc0-zkvm = { git = "https://github.com/halseth/risc0.git", rev="b98ac5021c1802dd594ef5fe6256bbb684263744", features = ["prove"] }
#risc0-zkvm = {path = "/Users/johan.halseth/code/risc0/risc0/zkvm", features = ["prove"] }
#risc0-zkvm = { version = "0.19.1", features = ["prove"] }
risc0-zkvm-platform = { git = "https://github.com/halseth/risc0.git", rev="b98ac5021c1802dd594ef5fe6256bbb684263744" }
#risc0-zkvm-platform = {path = "/Users/johan.halseth/code/risc0/risc0/zkvm/platform"}
risc0-binfmt = { git = "https://github.com/halseth/risc0.git", rev="b98ac5021c1802dd594ef5fe6256bbb684263744" }
#risc0-zkvm-platform = { version = "0.19.1" }
#fast_merkle = {path = "/Users/johan.halseth/code/fast_merkle"}
fast_merkle = { git = "https://github.com/halseth/fast_merkle.git", rev="b31dbd329c38e693b494f9f22eaaa2565849cd89" }
rrs-lib = "0.1"
bitcoin = "0.31.0"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
clap = { version = "4.5.4", features = ["derive"] }
